# BareMetal-Renderer2

./: .gitignore  CMakeLists.txt  README.md  main.cpp
docs/개발 일지/: 1일차.md  2일차.md  3,4일차.md  5.5일차.md  5일차.md  6일차.md  7일차.md
include/: Canvas.h  Core.h  Geometry.h  Rasterizer.h  Rasterizer_impl.h  Renderer.h  VertexShader.h
include/Fragment/: BlinnPhongShader.h  CelShader.h  FlatShader.h  FragmentIn.h  PhongShader.h  UnlitShader.h
include/data/: Material.h  Mesh.h  Texture.h
src/: Material.cpp  Mesh.cpp  Rasterizer.cpp  Rasterizer_impl.hpp  stb_img_impl.cpp
